--- a/config.env
+++ b/config.env
@@ -1,1 +1,168 @@
+# REQUIRED CONFIG
+BOT_TOKEN = "8478912186:AAE1AkXTWmCKAF8LrmbdImO0u3d-hmbHgrE"                              # Require restart after changing it while bot running
+OWNER_ID = "6883111123"                               # Require restart after changing it while bot running
+TELEGRAM_API = "23264133"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "945e5b76ce8550bebbeeaf5599e7ce58"                          # Require restart after changing it while bot running
 
+# OPTIONAL CONFIG
+USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://e55791917_db_user:RzXaeGE3AagxvADd@cluster0.ryscv19.mongodb.net/?appName=Cluster0"                           # Require restart after changing it while bot running
+DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
+CMD_SUFFIX = "2"                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1003045642687"                       # Require restart after changing it while bot running
+SUDO_USERS = "6883111123"                             # Require restart after changing it while bot running
+BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
+STATUS_LIMIT = "4"
+DEFAULT_UPLOAD = "gd"
+STATUS_UPDATE_INTERVAL = "2"
+AUTO_DELETE_MESSAGE_DURATION = "60"
+INCOMPLETE_TASK_NOTIFIER = "False"
+SET_COMMANDS = "True"
+EXTENSION_FILTER = ""
+YT_DLP_OPTIONS = ""
+FSUB_IDS = ""
+BOT_PM = "True"
+
+# Metadata
+METADATA = ""                                # Set Metadata Value
+ATTACHMENT = ""                              # Set Attachment Photo URL
+
+# GDrive Tools
+GDRIVE_ID = "1vbXLw9pOxRqHchN4qX2hAtIjoHbssSEo"
+USER_TD_MODE = ""
+USER_TD_SA = ""
+INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "False"
+IS_TEAM_DRIVE = "False"
+STOP_DUPLICATE = "True"
+DISABLE_DRIVE_LINK = "False"
+GD_INFO = "Uploaded by Leech Bot"
+
+# API's/Cookies
+REAL_DEBRID_API = ""
+DEBRID_LINK_API = ""
+FILELION_API = ""
+GDTOT_CRYPT = ""
+JIODRIVE_TOKEN = ""
+
+# Rclone
+RCLONE_PATH = ""
+RCLONE_FLAGS = ""
+RCLONE_SERVE_URL = "http://45.194.46.126"
+RCLONE_SERVE_PORT = "8080"
+RCLONE_SERVE_USER = "admin"
+RCLONE_SERVE_PASS = "eren"
+
+# Update
+UPSTREAM_REPO = ""
+UPSTREAM_BRANCH = "kpsmlx"
+UPGRADE_PACKAGES = ""
+
+# Leech & Mirror
+LEECH_SPLIT_SIZE = ""
+AS_DOCUMENT = "True"
+EQUAL_SPLITS = "False"
+MEDIA_GROUP = "False"
+CAP_FONT = "b"
+LEECH_FILENAME_PREFIX = ""
+LEECH_FILENAME_SUFFIX = ""
+LEECH_FILENAME_CAPTION = ""
+LEECH_FILENAME_REMNAME = ""
+MIRROR_FILENAME_PREFIX = ""
+MIRROR_FILENAME_SUFFIX = ""
+MIRROR_FILENAME_REMNAME = ""
+
+# Log Channel/SuperGroup (Topics Support)
+LEECH_LOG_ID = "-1003275787280"
+MIRROR_LOG_ID = ""
+LINKS_LOG_ID = "-1003599864728"
+
+# qBittorrent/Aria2c
+TORRENT_TIMEOUT = "600"
+BASE_URL = "http://45.194.46.126"
+BASE_URL_PORT = "8080"
+WEB_PINCODE = "False"
+
+#Queueing system
+QUEUE_ALL = ""
+QUEUE_DOWNLOAD = ""
+QUEUE_UPLOAD = ""
+
+# RSS
+RSS_DELAY = "600"
+RSS_CHAT = "-1003045642687"
+
+# Mega
+MEGA_EMAIL = "barmanarjun402@gmail.com"
+MEGA_PASSWORD = "arjun1234@"
+
+# Limits
+DAILY_TASK_LIMIT = ""
+DAILY_MIRROR_LIMIT = ""
+DAILY_LEECH_LIMIT = ""
+USER_MAX_TASKS = ""
+BOT_MAX_TASKS = ""
+TORRENT_LIMIT= ""
+DIRECT_LIMIT = ""
+GDRIVE_LIMIT = ""
+CLONE_LIMIT = ""
+YTDLP_LIMIT = ""
+PLAYLIST_LIMIT = ""
+LEECH_LIMIT = ""
+MEGA_LIMIT = ""
+STORAGE_THRESHOLD = ""
+USER_TIME_INTERVAL = "0"
+
+# Templates
+ANIME_TEMPLATE = ""
+IMDB_TEMPLATE = ""
+MDL_TEMPLATE = ""
+
+# Telegraph
+TITLE_NAME = "Leech Bot"
+AUTHOR_NAME = "AB Verse Bots"
+AUTHOR_URL = "https://telegram.me/Eren_Yeager_76"
+COVER_IMAGE = ""
+
+# Extra
+SAFE_MODE = ""
+DELETE_LINKS = "True"
+CLEAN_LOG_MSG = "True"
+SHOW_EXTRA_CMDS = "True"
+TIMEZONE = "Asia/Kolkata"
+IMAGES = ""
+IMG_SEARCH = ""
+IMG_PAGE = ""
+BOT_THEME = "minimal"
+EXCEP_CHATS = ""
+
+# M/L Buttons
+SCREENSHOTS_MODE = "False"
+SHOW_MEDIAINFO = "False"
+SAVE_MSG = "False"
+SOURCE_LINK = "False"
+
+# Token system
+TOKEN_TIMEOUT = "86400"
+LOGIN_PASS = "ErenYeager"
+
+# Torrent Search
+SEARCH_API_LINK = ""
+SEARCH_LIMIT = "0"
+SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/limetorrents.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/torrentscsv.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/torlock.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/eztv.py",
+                   "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/torrentproject.py",
+                   "https://raw.githubusercontent.com/v1k45/1337x-qBittorrent-search-plugin/master/leetx.py",
+                   "https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engines/master/kickass_torrent.py",
+                   "https://raw.githubusercontent.com/MaurizioRicci/qBittorrent_search_engines/master/yts_am.py",
+                   "https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/linuxtracker.py",
+                   "https://raw.githubusercontent.com/MadeOfMagicAndWires/qBit-plugins/master/engines/nyaasi.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/ettv.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/glotorrents.py",
+                   "https://raw.githubusercontent.com/LightDestory/qBittorrent-Search-Plugins/master/src/engines/thepiratebay.py",
+                   "https://raw.githubusercontent.com/nindogo/qbtSearchScripts/master/magnetdl.py",
+                   "https://raw.githubusercontent.com/msagca/qbittorrent_plugins/main/uniondht.py",
+                   "https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py"]'
